# cuda_exercises

./: CMakeLists.txt
src/: array_sum_pre.cu  matrix_addition.cu  matrix_transpose.cu  memcpy.cu
